--- a/src/main/resources/templates/register-success.html
+++ b/src/main/resources/templates/register-success.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Registration Success</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/signin.css}">
+</head>
 <body>
 <div class="container text-center">
     <h3>You have registered successfully!</h3>
