--- a/src/main/resources/templates/register-success.html
+++ b/src/main/resources/templates/register-success.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="ISO-8859-1">
     <title>Registration Success</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/css/signin.css}">
+    <div th:replace="fragments/header"></div>
 </head>
 <body>
 <div class="container text-center">
