--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,11 +3,12 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
     <title>Student Portal Home Page</title>
+    <div th:replace="fragments/header"></div>
 </head>
 <body>
-<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+<div th:replace="fragments/nav"></div>
+<div id="container">
+    <h1 th:inline="text">Hello, [[${user.userName}]]!</h1>
+</div>
 </body>
 </html>
