Minor CSS change (margins).

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div th:replace="fragments/nav"></div>
-<div id="container">
+<div id="container" class="container">
     <h1 th:inline="text">Hello, [[${user.userName}]]!</h1>
 </div>
 </body>
