Minor HTML refactor.

--- a/src/main/resources/templates/register-success.html
+++ b/src/main/resources/templates/register-success.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Registration Success</title>
-    <div th:replace="fragments/header"></div>
+    <meta th:replace="fragments/header"/>
 </head>
 <body>
 <div class="container text-center">
