--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
     <title>Student Portal Home Page</title>
-    <div th:replace="fragments/header"></div>
+    <meta th:replace="fragments/header"/>
 </head>
 <body>
 <div th:replace="fragments/nav"></div>
