--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Please sign in</title>
-    <div th:replace="fragments/header"></div>
+    <meta th:replace="fragments/header"/>
 </head>
 <body>
 <div id="container">
