--- a/src/main/resources/templates/register-success.html
+++ b/src/main/resources/templates/register-success.html
@@ -5,7 +5,7 @@
     <meta th:replace="fragments/header"/>
 </head>
 <body>
-<div class="container text-center">
+<div class="container text-center" id="container">
     <h3>You have registered successfully!</h3>
     <h4><a href="/login">Click here to Log in</a></h4>
 </div>
