--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,4 +3,5 @@
 <meta name="author" content="tvergilio">
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 <link rel="stylesheet" th:href="@{/css/signin.css}">
+<link rel="stylesheet" th:href="@{/css/all.min.css}">
 <link rel="stylesheet" th:href="@{/css/styles.css}">
