--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
     <meta th:replace="fragments/header"/>
 </head>
 <body>
-<div id="container">
+<div id="container" class="container">
     <form class="form-signin" th:action="@{/register}" th:object="${user}"
           method="post" style="max-width: 600px; margin: 0 auto;">
         <h2 class="form-signin-heading">User Registration</h2>
