--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -11,10 +11,15 @@
     <h1 th:inline="text">[[${course.title}]]</h1>
     <p th:inline="text">[[${course.description}]]</p>
     <p th:inline="text">Fee: [[${#numbers.formatCurrency(course.fee)}]]</p>
-    <form action="#" th:action="@{'/courses/' + ${course.id} + '/enrol'}" method="post">
-        <button class="btn btn-primary btn-lg" type="submit" name="course" value="submit">Enrol
-        </button>
-    </form>
+    <div th:unless="${isEnrolled}">
+        <form action="#" th:action="@{'/courses/' + ${course.id} + '/enrol'}" method="post">
+            <button class="btn btn-primary btn-lg" type="submit" name="course" value="submit">Enrol
+            </button>
+        </form>
+    </div>
+    <div th:if="${isEnrolled}" th:class="${'alert alert-success w-25'}">
+        <p>You are enrolled in this course.</p>
+    </div>
 </div>
 </body>
 </html>
