--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -14,10 +14,10 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/courses}">All Courses</a>
                 </li>
-                <li class="nav-item" th:if="${student}">
+                <li class="nav-item" th:if="${isStudent}">
                     <a class="nav-link" th:href="@{/enrolments}">My Enrolments</a>
                 </li>
-                <li class="nav-item" th:if="${student}">
+                <li class="nav-item" th:if="${isStudent}">
                     <a class="nav-link" th:href="@{/profile}">My Student Profile</a>
                 </li>
                 <li class="nav-item">
