--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,8 @@
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap-table.min.js"></script>
+<script src="/js/application.js"></script>
 <div th:fragment="footer">
-    &copy; T. Vergilio 2021
+    <div class="copyright">
+         Copyright &copy; 2021 T. Vergilio. All Rights Reserved
+    </div>
 </div>
