--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2,3 +2,17 @@
     margin-left: 20px;
     margin-top: 20px;
 }
+
+footer {
+    position: relative;
+    height: 300px;
+    width: 100%;
+}
+
+.copyright {
+    position: absolute;
+    width: 100%;
+    line-height: 40px;
+    text-align: center;
+    bottom:0;
+}
