--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
-    <title>Student Portal Home Page</title>
+    <title>Student Profile Page</title>
     <meta th:replace="fragments/header"/>
 </head>
 <body>
@@ -10,11 +10,16 @@
 <div id="container" class="container">
     <!--/*@thymesVar id="student" type="uk.ac.leedsbeckett.student.Student"*/-->
     <th:block th:if="${student}">
-        <h1 th:inline="text">My Student Profile</h1>
+        <h2 th:inline="text">Student Profile</h2>
         <p th:inline="text">First Name: [[${student.forename}]]</p>
         <p th:inline="text">Surname: [[${student.surname}]]</p>
         <p th:inline="text">Student ID: [[${student.studentId}]]</p>
+        <a class="btn btn-primary" th:href="@{'/editProfile/' + ${student.id}}" role="button">Edit Profile</a>
     </th:block>
 </div>
+<div class="container container-fluid">
+    <div id="alert" th:if="${message}" th:text="${message}" th:class="${'alert alert-success w-25'}"></div>
+</div>
+<div th:replace="fragments/footer"></div>
 </body>
 </html>
