--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 <body>
 <div id="container" class="container">
     <form class="form-signin" th:action="@{/register}" th:object="${user}"
-          method="post" style="max-width: 600px; margin: 0 auto;">
+          method="post">
         <h2 class="form-signin-heading">User Registration</h2>
         <p>
             <label for="username">Username: </label>
