--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -28,8 +28,8 @@
                     </form>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" th:action="@{/search}">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="form-inline my-2 my-lg-0" th:action="@{/courses/search}" method="post">
+                <input class="form-control mr-sm-2" name="searchString" type="text" placeholder="Search" aria-label="Search"/>
                 <button class="btn btn-warning my-2 my-sm-0" type="submit">Course Search</button>
             </form>
         </div>
