Refactored HTML files.

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,8 +1,6 @@
-<script src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap-table.min.js"></script>
-<script src="/js/application.js"></script>
+<div th:replace="fragments/scripts.html"></div>
 <div th:fragment="footer">
     <div class="copyright">
-         Copyright &copy; 2021 T. Vergilio. All Rights Reserved
+        Copyright &copy; 2021 T. Vergilio. All Rights Reserved
     </div>
 </div>
