--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,8 +1,4 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="tvergilio">
-<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-<link rel="stylesheet" th:href="@{/css/signin.css}">
-<link rel="stylesheet" th:href="@{/css/all.min.css}">
-<link rel="stylesheet" th:href="@{/css/bootstrap-table.min.css}">
-<link rel="stylesheet" th:href="@{/css/styles.css}">
+<meta th:replace="fragments/styles"/>
