--- a/src/main/resources/templates/register-success.html
+++ b/src/main/resources/templates/register-success.html
@@ -9,6 +9,6 @@
     <h3>You have registered successfully!</h3>
     <h4><a href="/login">Click here to Log in</a></h4>
 </div>
-
+<div th:replace="fragments/footer"></div>
 </body>
 </html>
