--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,5 +25,6 @@
         <button type="submit" class="btn btn-lg btn-primary btn-block">Sign Up</button>
     </form>
 </div>
+<div th:replace="fragments/footer"></div>
 </body>
 </html>
