--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -11,10 +11,10 @@
     <table class="table" data-toggle="table">
         <thead>
         <tr>
-            <th scope="col" data-sortable="true">Title</th>
+            <th scope="col" data-sortable="true" class="normal-width">Title</th>
             <th scope="col">Description</th>
-            <th scope="col" data-sortable="true">Fee</th>
-            <th scope="col">Action</th>
+            <th scope="col" data-sortable="true" class="narrow-width">Fee</th>
+            <th scope="col" class="narrow-width">Action</th>
         </tr>
         </thead>
         <tbody>
