--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,8 +10,8 @@
 <div id="container" class="container">
     <h2 th:inline="text">Hello, [[${showFirstName ? student.forename : user.userName}]]!</h2>
     <p>Welcome to your portal.</p>
-    <p>Here, you will find information about the courses we offer and will be able to enrol in them.</p>
-    <p>Once you have become a student, which happens automatically upon enrolling in your first course, you will be able
+    <p>Here, you can find information about and enrol in any of the courses we offer.</p>
+    <p>Once you have registered as a student, which happens automatically upon enrolling in your first course, you will be able
         to access and edit your student profile.</p>
     <p>You will also be able to see the courses you are enrolled in.</p>
     <p>Use the navigation bar above to access the different features of your portal.</p>
