Fixed bug with course fee column not sorting correctly.

--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -13,7 +13,7 @@
         <tr>
             <th scope="col" data-sortable="true" class="normal-width">Title</th>
             <th scope="col">Description</th>
-            <th scope="col" data-sortable="true" class="narrow-width">Fee</th>
+            <th scope="col" data-sortable="true" data-sorter="currencySorter" class="narrow-width">Fee</th>
             <th scope="col" class="narrow-width">Action</th>
         </tr>
         </thead>
