Updated integration with finance microservice.

--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div th:replace="fragments/nav"></div>
+<div id="alert" th:if="${isEnrolled}" th:text="${message}" th:class="${'alert alert-success'}"></div>
 <div id="container" class="container">
     <h1 th:inline="text">[[${course.title}]]</h1>
     <p th:inline="text">[[${course.description}]]</p>
@@ -16,9 +17,6 @@
             <button class="btn btn-primary btn-lg" type="submit" name="course" value="submit">Enrol
             </button>
         </form>
-    </div>
-    <div th:if="${isEnrolled}" th:class="${'alert alert-success w-25'}">
-        <p>You are enrolled in this course.</p>
     </div>
 </div>
 <div th:replace="fragments/footer"></div>
