Minor CSS change, moved alert box to the top.

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -7,18 +7,15 @@
 </head>
 <body>
 <div th:replace="fragments/nav"></div>
+<div id="alert" th:if="${message}" th:text="${message}"
+     th:class="${updated ? 'alert alert-success' : 'alert alert-warning'}"></div>
 <div id="container" class="container">
     <!--/*@thymesVar id="student" type="uk.ac.leedsbeckett.student.Student"*/-->
-    <th:block th:if="${student}">
-        <h2 th:inline="text">Student Profile</h2>
-        <p th:inline="text">First Name: [[${student.forename}]]</p>
-        <p th:inline="text">Surname: [[${student.surname}]]</p>
-        <p th:inline="text">Student ID: [[${student.studentId}]]</p>
-        <a class="btn btn-primary" th:href="@{'/editProfile/' + ${student.id}}" role="button">Edit Profile</a>
-    </th:block>
-</div>
-<div class="container container-fluid">
-    <div id="alert" th:if="${message}" th:text="${message}" th:class="${updated ? 'alert alert-success w-25' : 'alert alert-warning w-25'}"></div>
+    <h2 th:inline="text">Student Profile</h2>
+    <p th:inline="text">First Name: [[${student.forename}]]</p>
+    <p th:inline="text">Surname: [[${student.surname}]]</p>
+    <p th:inline="text">Student ID: [[${student.studentId}]]</p>
+    <a class="btn btn-primary" th:href="@{'/editProfile/' + ${student.id}}" role="button">Edit Profile</a>
 </div>
 <div th:replace="fragments/footer"></div>
 </body>
